--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -11,16 +11,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>My Bicycle Shop</title>
+    <title>AutoParts Central</title>
 </head>
 <body>
 
 <div class="container">
-    <h1>Shop</h1>
+    <h1>AutoParts Central Inventory Management</h1>
     <hr>
-    <h2>Parts</h2>
+    <h2>Vehicle Parts</h2>
     <form th:action="@{/mainscreen}">
-        Filter: <input type="text" name="partkeyword" id="partkeyword" size="50" th:value="${partkeyword}" required />
+        <label for="partkeyword">Filter Parts:</label>
+        <input type="text" name="partkeyword" id="partkeyword" size="50" th:value="${partkeyword}" required />
         &nbsp;
         <input type="submit" value="Search" />
         &nbsp;
@@ -32,60 +33,64 @@
     <table class="table table-bordered table-striped">
         <thead class="thead-dark">
         <tr>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Inventory</th>
-            <th>Action</th>
+            <th>Part Name</th>
+            <th>Unit Price</th>
+            <th>Current Stock</th>
+            <th>Manage</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="tempPart : ${parts}">
-            <td th:text="${tempPart.name}">1</td>
-            <td th:text="${tempPart.price}">1</td>
-            <td th:text="${tempPart.inv}">1</td>
-            <td><a th:href="@{/showPartFormForUpdate(partID=${tempPart.id})}" class="btn btn-primary btn-sm mb-3">Update</a>
+            <td th:text="${tempPart.name}">Brake Pad</td>
+            <td th:text="${tempPart.price}">$19.99</td>
+            <td th:text="${tempPart.inv}">50</td>
+            <td>
+                <a th:href="@{/showPartFormForUpdate(partID=${tempPart.id})}" class="btn btn-primary btn-sm mb-3">Update</a>
                 <a th:href="@{/deletepart(partID=${tempPart.id})}" class="btn btn-primary btn-sm mb-3"
                    onclick="if(!(confirm('Are you sure you want to delete this part?')))return false">Delete</a>
             </td>
         </tr>
         </tbody>
     </table>
-    <h2>Products</h2>
+    <h2>Vehicle Maintenance Kits</h2>
     <form th:action="@{/mainscreen}">
-        Filter: <input type="text" name="productkeyword" id="productkeyword" size="50" th:value="${productkeyword}" required />
+        <label for="productkeyword">Filter Kits:</label>
+        <input type="text" name="productkeyword" id="productkeyword" size="50" th:value="${productkeyword}" required />
         &nbsp;
         <input type="submit" value="Search" />
         &nbsp;
         <input type="button" value="Clear" id="btnClearProduct" onclick="clearSearch()" />
     </form>
-    <script type="text/javascript">
-        function clearSearch() {
-            window.location = "[[@{/}]]";
-        }
-    </script>
     <br><br>
-    <a th:href="@{/showFormAddProduct}" class="btn btn-primary btn-sm mb-3">Add Product</a>
+    <a th:href="@{/showFormAddProduct}" class="btn btn-primary btn-sm mb-3">Add New Kit</a>
     <table class="table table-bordered table-striped">
         <thead class="thead-dark">
         <tr>
-            <th>Name</th>
-            <th>Price</th>
+            <th>Kit Name</th>
+            <th>Kit Price</th>
             <th>Inventory</th>
-            <th>Action</th>
+            <th>Manage</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="tempProduct : ${products}">
-            <td th:text="${tempProduct.name}">1</td>
-            <td th:text="${tempProduct.price}">1</td>
-            <td th:text="${tempProduct.inv}">1</td>
-            <td><a th:href="@{/showProductFormForUpdate(productID=${tempProduct.id})}" class="btn btn-primary btn-sm mb-3">Update</a>
+            <td th:text="${tempProduct.name}">Basic Maintenance Kit</td>
+            <td th:text="${tempProduct.price}">$89.99</td>
+            <td th:text="${tempProduct.inv}">20</td>
+            <td>
+                <a th:href="@{/showProductFormForUpdate(productID=${tempProduct.id})}" class="btn btn-primary btn-sm mb-3">Update</a>
                 <a th:href="@{/deleteproduct(productID=${tempProduct.id})}" class="btn btn-primary btn-sm mb-3"
-                   onclick="if(!(confirm('Are you sure you want to delete this product?')))return false">Delete</a>
+                   onclick="if(!(confirm('Are you sure you want to delete this kit?')))return false">Delete</a>
             </td>
         </tr>
         </tbody>
     </table>
 </div>
+<script type="text/javascript">
+    function clearSearch() {
+        window.location = "[[@{/}]]"; // Replace with the correct URL if needed
+    }
+</script>
 </body>
 </html>
+
