--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -113,7 +113,7 @@
 </div>
 <script type="text/javascript">
     function clearSearch() {
-        window.location = "[[@{/}]]"; // Replace with the correct URL if needed
+        window.location = "[[@{/}]]";
     }
 </script>
 </body>
