--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -17,6 +17,7 @@
 
 <div class="container">
     <h1>Tech Central</h1>
+    <a href="/about" class="btn btn-info">About Us</a>
     <hr>
     <h2>Parts</h2>
     <form th:action="@{/mainscreen}">
