--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -17,6 +17,10 @@
 
 <div class="container">
     <h1>Tech Central</h1>
+    <div class="messages">
+        <p th:if="${success}" th:text="${success}" class="alert alert-success"></p>
+        <p th:if="${error}" th:text="${error}" class="alert alert-danger"></p>
+    </div>
     <a href="/about" class="btn btn-info">About Us</a>
     <hr>
     <h2>Parts</h2>
@@ -83,6 +87,10 @@
             <td><a th:href="@{/showProductFormForUpdate(productID=${tempProduct.id})}" class="btn btn-primary btn-sm mb-3">Update</a>
                 <a th:href="@{/deleteproduct(productID=${tempProduct.id})}" class="btn btn-primary btn-sm mb-3"
                    onclick="if(!(confirm('Are you sure you want to delete this product?')))return false">Delete</a>
+                <form th:action="@{/buyProduct}" method="post" class="d-inline">
+                    <input type="hidden" name="productId" th:value="${tempProduct.id}" />
+                    <input type="submit" value="Buy Now" class="btn btn-success btn-sm mb-3" />
+                </form>
             </td>
         </tr>
         </tbody>
